src/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:ital,wght@1,700&family=Patrick+Hand&family=Roboto&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;

    /* Fonts */
    font-family: 'Bebas Neue', sans-serif;
    font-family: 'Open Sans', sans-serif;
    font-family: 'Patrick Hand', cursive;
    font-family: 'Roboto', sans-serif;
}

body,
html {
    height: 100vh;
}

.root,
.sidebar,
.logo,
.main-content,
.quick-tasks-manager {
    display: grid;
    background-color: #27272a;
}

.root {
    height: inherit;
    grid-template-columns: minmax(300px, 1.75fr) 10fr;
}

/* Sidebar styling. */
.sidebar,
.logo {
    background-color: #1c1917;
}

.sidebar {
    grid-template-rows: 1fr 10fr;
    gap: 20px;
    padding: 5px;
    border-right: 5px solid #7e22ce;
}

.logo {
    justify-items: center;
    align-items: center;
    color: #c084fc;
    font-size: 20px;
}

.quick-tasks-and-projects,
.heading-and-add-task-btn {
    display: flex;
    align-items: center;
    flex-direction: column;
}

.quick-tasks-and-projects {
    gap: 25px;
}

.quick-tasks-and-projects button,
.heading-and-add-task-btn button,
.create-task-form button,
.project-task-manager button {
    background-color: transparent;
    border: 2px solid #FFFFFF;
    border-radius: 10px;
    color: #FFFFFF;
    font-size: 20px;
    font-weight: 600;
    height: 50px;
    width: 250px;
}

.quick-tasks-and-projects button:hover,
.edit-task-form button:hover,
.heading-and-add-task-btn button:hover,
.create-task-form button:hover,
.project-task-manager button:hover,
.proj-task-form button:hover {
    transition: 0.3s;
    transform: scale(1.05);
    color: #7e22ce;
    border: 2px solid #7e22ce;
}

.quick-tasks-and-projects button:active,
.heading-and-add-task-btn button:active,
.edit-task-form button:active,
.create-task-form button:active,
.project-task-manager button:active,
.proj-task-form button:active {
    transition: 0.3s;
    transform: scale(0.99);
    color: #7e22ce;
    border: 2px solid #7e22ce;
}

/* Main content styling. */
.main-content {
    align-items: center;
    justify-items: center;
}

.quick-tasks-manager {
    display: none;
    grid-template-rows: 3fr 8fr;
    height: 60%;
    min-width: 330px;
    width: 60%;
    background-color: #1c1917;
    border-radius: 10px;
    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px,
        rgba(0, 0, 0, 0.07) 0px 2px 2px,
        rgba(0, 0, 0, 0.07) 0px 4px 4px,
        rgba(0, 0, 0, 0.07) 0px 8px 8px,
        rgba(0, 0, 0, 0.07) 0px 16px 16px;
}

.heading-and-add-task-btn {
    justify-content: space-evenly;
    padding: 0px 40px;
}

.heading-and-add-task-btn h2 {
    color: #c084fc;
}

.heading-and-add-task-btn button {
    min-width: fit-content;
    min-height: fit-content;
    width: 100%;
    height: 40%;
}

/* Form styling */
.create-task-form,
.create-task-form input,
.create-task-form select,
.create-task-form button,
.edit-task-form,
.edit-task-form input,
.edit-task-form select,
.edit-task-form button,
.proj-task-form, 
.proj-task-form input, 
.proj-task-form select, 
.proj-task-form button {
    width: 100%;
    height: 75%;
    font-size: 16px;
    border: 3px solid #FFFFFF;
    color: #FFFFFF;
    padding-left: 5px;
    border-radius: 10px;
    background-color: transparent;
}

.create-task-form input {
    border: 3px solid #FFFFFF;
}

.create-task-form,
.edit-task-form,
.proj-task-form {
    display: none;
    height: fit-content;
    width: fit-content;
    border: 3px solid #7e22ce;
    justify-content: center;
    flex-direction: column;
    font-size: 18px;
    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px,
        rgba(0, 0, 0, 0.07) 0px 2px 2px,
        rgba(0, 0, 0, 0.07) 0px 4px 4px,
        rgba(0, 0, 0, 0.07) 0px 8px 8px,
        rgba(0, 0, 0, 0.07) 0px 16px 16px;
    gap: 30px;
    background-color: #1c1917;
    padding: 20px;
}

.create-task-form button,
.edit-task-form button,
.proj-task-form button {
    color: #FFFFFF;
    border: 2px solid #FFFFFF;
    height: 50px;
}

/* Quick tasks list styling */
.list-of-quick-tasks,
.list-of-proj-tasks {
    padding: 25px;
    border-top: 3px solid #7e22ce;
    gap: 20px;
    max-height: 600px;
    display: grid;
    overflow-y: scroll;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(auto, 1fr);
}

/* Task styling */
.task,
.name-desc-date,
.checkbox-priority-edit-delete,
.edit-delete-btn {
    display: flex;
    flex-direction: column;
    gap: 20px;
    color: #FFFFFF;
}

.task {
    align-items: center;
    gap: 0px;
    flex-direction: row;
    justify-content: space-between;
    padding: 0px 20px;
    height: 175px;
    width: 100%;
    background-color: #27272a;
    border-left: 20px solid #4a044e;
    border-radius: 10px;
}

.checkbox-priority-edit-delete {
    width: 150px;
    gap: 15px;
}

.task-name {
    color: #c084fc;
}

#checkbox {
    vertical-align: middle;
    height: 18px;
    width: 18px;
}

.task-checkbox label,
.task-priority {
    vertical-align: middle;
    font-size: 18px;
}

.edit-delete-btn {
    gap: 10px;
}

.edit-delete-btn button {
    height: 30px;
    background-color: transparent;
}

.edit-task-btn {
    color: #1d4ed8;
    border: 3px solid #1d4ed8;
    border-radius: 10px;
}

.edit-task-btn:hover {
    transition: 0.3s;
    background-color: #1d4ed8;
    color: white;
}

.edit-task-btn:active {
    transition: 0.3s;
    background-color: #1d4ed8;
    color: white;
}

.del-task-btn {
    color: red;
    border: 3px solid red;
    border-radius: 10px;
}

.del-task-btn:hover {
    transition: 0.3s;
    background-color: red;
    color: white;
}

.del-task-btn:active {
    transition: 0.3s;
    background-color: red;
    color: white;
}

.proj-heading-and-add-btn {
    display: flex;
    flex-direction: column;
    gap: 20px;
    width: 270px;
}

.proj-heading-and-add-btn div:nth-child(1) {
    display: flex;
    gap: 20px;
    align-items: center;
    width: 270px;
    justify-content: space-between;
}

.proj-heading-and-add-btn div:nth-child(1) button {
    width: 75px;
}

.proj-heading-and-add-btn div:nth-child(1) h2 {
    color: #FFFFFF;
}

.input-proj-name {
    display: none;
    flex-direction: column;
    gap: 10px;
}

.input-proj-name label {
    font-size: 16px;
    color: #FFFFFF;
}

.input-proj-name input {
    width: 100%;
    height: 30px;
    border: none;
    border-radius: 12px;
    padding-left: 15px;
}

.input-proj-name button {
    align-self: center;
    width: 150px;
    height: 40px;
}

.input-proj-name button.add-proj:hover {
    color: #1d4ed8;
    border: 3px solid #1d4ed8;
}

.input-proj-name button.cancel-proj:hover {
    color: red;
    border: 3px solid red;
}

.proj-btns {
    display: grid;
    grid-template-rows: repeat(auto-fill, 1fr);
    grid-auto-rows: 75px;
    height: 500px;
    padding: 10px 0px;
    overflow: auto;
    justify-content: center;
    background-color: #27272a;
    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px,
    rgba(0, 0, 0, 0.07) 0px 2px 2px,
    rgba(0, 0, 0, 0.07) 0px 4px 4px,
    rgba(0, 0, 0, 0.07) 0px 8px 8px,
    rgba(0, 0, 0, 0.07) 0px 16px 16px;
    border: 3px solid #7e22ce;
    border-radius: 10px;
}

.proj-btns button {
    min-height: 40px;
    min-width: 250px;
    overflow: hidden;
}

.projects {
    display: none;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    height: 60%;
    width: 60%;
    min-width: 400px;
    border-radius: 20px;
    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px,
    rgba(0, 0, 0, 0.07) 0px 2px 2px,
    rgba(0, 0, 0, 0.07) 0px 4px 4px,
    rgba(0, 0, 0, 0.07) 0px 8px 8px,
    rgba(0, 0, 0, 0.07) 0px 16px 16px;
    background-color: #1c1917;
}

.project {
    display: grid;
    grid-template-rows: 1.5fr 8fr;
}

.project-task-manager {
    display: flex;
    color: #c084fc;
    padding: 25px;
    flex-direction: column;
    gap: 20px;
    align-items: center;
    justify-content: space-evenly;
}

.list-of-proj-tasks {
    height: inherit;
}

.project-task-manager button {
    height: 50px;
    width: 100%;
}

